# mercari_follow

./: Dockerfile  README.md  config.example.yaml  config.example.yml  pyproject.toml
lib/: captcha.py  logger.py  mercari_comment.py
script/: registry_push.zsh
src/: mercari.py  mercari_follow.py
